--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,7 @@
   },
   "default_locale": "en",
   "background": {
+    "page": "src/background.html",
     "persistent": false
   },
   "page_action": {
